clusters/homelab/apps/prometheus/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus-tailnet
  namespace: monitoring
  annotations:
    homelab.rst.io/public-funnel: "false"
spec:
  hosts:
    - prometheus.stinkyboi.com
  gateways:
    - istio-system/tailnet-gateway
  http:
    - route:
        - destination:
            host: prometheus-kube-prometheus-prometheus.monitoring.svc.cluster.local
            port:
              number: 9090
